@@ -3120,28 +3120,35 @@ get_options(cupsd_job_t *job,		/* I - Job */
         num_pwgppds = cupsAddOption(pwg->sides_option, pwg->sides_2sided_short,
 				    num_pwgppds, &pwgppds);
     }
+
+    if (!ippFindAttribute(job->attrs, "InputSlot", IPP_TAG_ZERO) &&
+	!ippFindAttribute(job->attrs, "HPPaperSource", IPP_TAG_ZERO))
+    {
+      if ((ppd = _pwgGetInputSlot(pwg, job->attrs, NULL)) != NULL)
+	num_pwgppds = cupsAddOption(pwg->source_option, ppd, num_pwgppds,
+				    &pwgppds);
+      else if (!ippFindAttribute(job->attrs, "AP_D_InputSlot", IPP_TAG_ZERO))
+	num_pwgppds = cupsAddOption("AP_D_InputSlot", "", num_pwgppds,
+	                            &pwgppds);
+    }
+
+    if (!ippFindAttribute(job->attrs, "MediaType", IPP_TAG_ZERO) &&
+	(ppd = _pwgGetMediaType(pwg, job->attrs, NULL)) != NULL)
+      num_pwgppds = cupsAddOption("MediaType", ppd, num_pwgppds, &pwgppds);
+
+    if (!ippFindAttribute(job->attrs, "PageRegion", IPP_TAG_ZERO) &&
+	!ippFindAttribute(job->attrs, "PageSize", IPP_TAG_ZERO) &&
+	(ppd = _pwgGetPageSize(pwg, job->attrs, NULL, &exact)) != NULL)
+      num_pwgppds = cupsAddOption("PageSize", ppd, num_pwgppds, &pwgppds);
+
+    if (!ippFindAttribute(job->attrs, "OutputBin", IPP_TAG_ZERO) &&
+	(attr = ippFindAttribute(job->attrs, "output-bin",
+				 IPP_TAG_ZERO)) != NULL &&
+	(attr->value_tag == IPP_TAG_KEYWORD ||
+	 attr->value_tag == IPP_TAG_NAME) &&
+	(ppd = _pwgGetOutputBin(pwg, attr->values[0].string.text)) != NULL) 
+      num_pwgppds = cupsAddOption("OutputBin", ppd, num_pwgppds, &pwgppds);
   }
-
-  if (!ippFindAttribute(job->attrs, "InputSlot", IPP_TAG_ZERO) &&
-      (ppd = _pwgGetInputSlot(job->printer->pwg, job->attrs, NULL)) != NULL)
-    num_pwgppds = cupsAddOption("InputSlot", ppd, num_pwgppds, &pwgppds);
-
-  if (!ippFindAttribute(job->attrs, "MediaType", IPP_TAG_ZERO) &&
-      (ppd = _pwgGetMediaType(job->printer->pwg, job->attrs, NULL)) != NULL)
-    num_pwgppds = cupsAddOption("MediaType", ppd, num_pwgppds, &pwgppds);
-
-  if (!ippFindAttribute(job->attrs, "PageRegion", IPP_TAG_ZERO) &&
-      !ippFindAttribute(job->attrs, "PageSize", IPP_TAG_ZERO) &&
-      (ppd = _pwgGetPageSize(job->printer->pwg, job->attrs, NULL,
-			     &exact)) != NULL)
-    num_pwgppds = cupsAddOption("PageSize", ppd, num_pwgppds, &pwgppds);
-
-  if (!ippFindAttribute(job->attrs, "OutputBin", IPP_TAG_ZERO) &&
-      (attr = ippFindAttribute(job->attrs, "output-bin",
-                               IPP_TAG_ZERO)) != NULL &&
-      (attr->value_tag == IPP_TAG_KEYWORD || attr->value_tag == IPP_TAG_NAME) &&
-      (ppd = _pwgGetOutputBin(pwg, attr->values[0].string.text)) != NULL) 
-    num_pwgppds = cupsAddOption("OutputBin", ppd, num_pwgppds, &pwgppds);
 
  /*
   * Figure out how much room we need...
@@ -3274,6 +3281,10 @@ get_options(cupsd_job_t *job,		/* I - Job */
 	  case IPP_TAG_BOOLEAN :
 	      if (!attr->values[i].boolean)
 		strlcat(optptr, "no", optlength - (optptr - options));
+
+	      strlcat(optptr, attr->name,
+	              optlength - (optptr - options));
+	      break;
 
 	  case IPP_TAG_RANGE :
 	      if (attr->values[i].range.lower == attr->values[i].range.upper)
